--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -1,3 +1,132 @@
 $text-color: #26292b;
 
+$brand-primary: #4bba8c;
+
+$theme-darkgray: #26292b;
+$theme-gray: #4b5054;
+
+// Other colors
+$theme-pink: #ff6c82;
+$theme-green: #50b88a;
+$theme-lightgray: #f1f1f1;
+$theme-lightblue: #ecfafe;
+
+$footer-height: 266px;
+
 @import '_bootstrap';
+
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: $footer-height;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: $footer-height;
+  background-color: $theme-darkgray;
+	color: white;
+
+	.top-footer {
+		background-color: $theme-gray;
+		width: 100%;
+		height: 58px;
+	}
+}
+
+
+.navbar-nav > li > a {
+	line-height: 81px;
+}
+
+.navbar-default {
+	background-color: white;
+	border: none;
+	box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.45);
+	margin-bottom: 0px;
+}
+
+.navbar-default {
+	.navbar-nav {
+		& > .active > a,
+		& > .active > a:hover,
+		& > .active > a:focus {
+			background: transparent;
+		}
+	}
+
+}
+
+#branding-section {
+	background-position: center bottom;
+	background-size: cover;
+
+	background-image: url('../images/top-bg.png');
+	background-repeat: repeat-x;
+
+}
+
+#branding-section .jumbotron {
+	background-color: transparent;
+}
+
+h2, .h2 {
+	font-size: 2.8em;
+	margin-top: 1em;
+	text-align: center;
+	font-weight: 300;
+	letter-spacing: 2px;
+	margin-bottom: .8em;
+	text-transform: uppercase;
+}
+
+.lead {
+	letter-spacing: 1px;
+	text-align: center;
+	line-height: 1.7em;
+	font-size: 1.3em;
+}
+
+.jumbotron .lead {
+	font-size: 1.3em;
+}
+
+.jumbotron {
+	.btn-lg {
+		font-size: 1.1em;
+		text-transform: uppercase;
+		letter-spacing: 1px;
+		padding: .74em 1.7em;
+		border-radius: 1.84em;
+	}
+}
+
+main {
+
+}
+
+.align-center {
+	text-align: center;
+}
+
+.btn-pink {
+	@include button-variant(white, $theme-pink, $theme-pink);
+}
+
+.btn-green {
+	@include button-variant(white, $theme-green, $theme-green);
+}
+
+#homepage-main {
+	padding: 2em 0 3.5em;
+	p {
+		font-size: 1.1em;
+	}
+}
