--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -23,6 +23,7 @@ html {
 body {
   /* Margin bottom by footer height */
   margin-bottom: $footer-height;
+  font-family: 'Quicksand', sans-serif;
 }
 
 .footer {
