--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -275,3 +275,64 @@ main {
   border-radius: 75px;
   font-size: 1.225em;
 }
+
+.category-main {
+  .container-liquid {
+    background-color: #ff6c82;
+    color: white;
+  }
+  h3 {
+    padding-top: 30px;
+    text-align: left;
+    font-size: 2.5em;
+    text-transform: uppercase;
+  }
+  p {
+    font-size: 1.25em;
+  }
+  .category-form {
+    font-size: 1.25em;
+    padding-bottom: 100px;
+    hr {
+      color: #ff6c82 !important;
+      border: 1px solid #ff6c82;
+    }
+    .hrfix {
+      margin-top: 85px;
+    }
+    p {
+      padding: 5px;
+      font-weight: bold;
+      .normal {
+        border: 1px solid #ff6c82;
+        border-radius: 50px;
+        width: 80%;
+        float: right;
+        font-weight: normal;
+        padding-left: 5px;
+      }
+      .comments {
+        border-color: #ff6c82;
+        border-style: solid;
+        border-radius: 20px;
+        width: 80%;
+        float: right;
+        font-weight: normal;
+        padding-left: 5px;
+        height: 93px;
+      }
+    }
+    .submit {
+      color: white;
+      background-color: #ff6c82;
+      border: 1px solid #ff6c82;
+      float: right;
+      padding-left: 100px;
+      padding-right: 100px;
+      padding-bottom: 5px;
+      padding-top: 5px;
+      font-size: 1.5em;
+      border-radius: 50px;
+    }
+  }
+}
